finished footer styles

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,7 @@
     font-family: 'Poppins', sans-serif;
     --bg-color: #646881;
     --txt-color: #C3BEF7;
+    --link-text-color: #FFFFFF;
 }
 
 /* Header Styling */
@@ -31,6 +32,7 @@
     max-width: 300px;
     margin: auto;
     margin-top: 25px;
+    margin-bottom: 25px;
     background-color: var(--bg-color);
     color: var(--txt-color);
     font-size: 1rem;
@@ -43,6 +45,16 @@
     background-color: var(--bg-color);
     color: var(--txt-color);
     position: fixed;
+    text-align: center;
     width: 100%;
     bottom: 0;
 }
+
+.footer > a {
+    color: var(--txt-color);
+}
+
+.footer > a:hover {
+    color: var(--link-text-color);
+}
+
