resized footer text, styled user input card, styled add book button

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,10 +27,10 @@ a {
     display: flex;
     justify-content: center;
     color: var(--txt-color);
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
-/* Button Styling */
+/* "Add a Book" Button Styling */
 .book_btn_box {
     margin: 0 auto;
     display: block;
@@ -44,7 +44,7 @@ a {
     margin-bottom: 25px;
     background-color: var(--bg-color);
     color: var(--txt-color);
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 5px;
     border-radius: 5px;
 }
@@ -80,6 +80,7 @@ a {
 .footer {
     background-color: var(--bg-color);
     color: var(--txt-color);
+    font-size: 1.125rem; 
     position: fixed;
     text-align: center;
     width: 100%;
