--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -36,7 +36,7 @@ a {
     display: block;
 }
 
-.book_btn {
+.add_new_book {
     display: block;
     max-width: 300px;
     margin: auto;
@@ -56,17 +56,18 @@ a {
         padding: 5px;
         margin: 2px;
         margin-bottom: 5px;
-        font-size: 20px;  
+        font-size: 1.25rem; 
         background-color: var(--bg-color);
         color: var(--txt-color);
 }
 
 /* Add Book Container */
 .add_book_container, .add_book_container > form > input {
+    display: none;
     border: 2px solid black;
     border-radius: 5px;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     background-color: var(--bg-color);
     color: var(--txt-color);
 }
