created Book constructor

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -77,10 +77,10 @@ a {
 }
 
 /* Book Card */
-.book_card {
+/* .book_card {
     border: 2px solid black;
     height: 100px;
-}
+} */
 
 /* Footer Styling */
 .footer {
